# bowling-game-cpp

./: .exrc  .gitignore  CMakeLists.txt
src/: Game.cpp  Game.h
test/: GameTest.cpp
